...
class CampusMapPageState extends State<CampusMapPage> {
  late MapViewModel _mapViewModel;
  late MapViewModel _buildMapViewModel;
  final BuildingViewModel _buildingViewModel = BuildingViewModel();
  late ConcordiaCampus _currentCampus;
  bool _locationPermissionGranted = false;
  static const searchStr = 'Search...';
  final TextEditingController _searchController =
      TextEditingController(text: searchStr);
  Set<Polygon> _polygons = {};
  Set<Marker> _labelMarkers = {};
  List<String> searchList = [];

...
  bool _isMapDataLoaded = false;

  // Removed the separate FutureBuilder methods as they're now consolidated in the build method

  Semantics _buildGoogleMap(CameraPosition initialCameraPosition) {
    return Semantics(
      label: 'Google Map',
      child: GoogleMap(
        buildingsEnabled: false,
        onMapCreated: (GoogleMapController controller) {
          _mapViewModel.onMapCreated(controller);
        },
        initialCameraPosition: initialCameraPosition,
...
