...
      ConcordiaFloor("4", BuildingRepository.h, 1),
      ConcordiaFloor("5", BuildingRepository.h, 1),
      ConcordiaFloor("6", BuildingRepository.h, 1),
      ConcordiaFloor("7", BuildingRepository.h, 1),
      ConcordiaFloor("8", BuildingRepository.h, 1),
      ConcordiaFloor("9", BuildingRepository.h, 1),
      ConcordiaFloor("10", BuildingRepository.h, 1),
      ConcordiaFloor("11", BuildingRepository.h, 1),
      ConcordiaFloor("12", BuildingRepository.h, 1)
    ]
  };

  // FYI if you Find and Replace in this file BuildingRepository.h.abbreviation
...
        hallFloors[10]
      ], {
        "1": [ConcordiaFloorPoint(hallFloors[2], 1570, 2440)],
        "2": [ConcordiaFloorPoint(hallFloors[3], 1235, 1330)],
        "8": [ConcordiaFloorPoint(hallFloors[8], 480, 420)],
        "9": [ConcordiaFloorPoint(hallFloors[9], 460, 425)]
      }, false, "Escalators", 0, 15)
    ]
  };

  /// One exit per building for simplicity. Key is building abberivation. For
  /// best cohesion with the outdoor routing portion, use the exit that
  /// corresponds to the municipal street address for the building (eg. for Hall
...
