...
  final List<String> _searchList = [];

  ConcordiaFloor getDefaultFloor() {
    const defaultBuilding = ConcordiaBuilding(
      45.4972159,
      -73.5790067,
      'Hall Building',
      '1455 Boulevard de Maisonneuve O',
      'Montreal',
      'QC',
      'H3G 1M8',
      'H',
      ConcordiaCampus.sgw,
...
