...
        currentStep, viewModel, isFinalStep, buttonConfig);
  }

  ({String text, VoidCallback onPressed}) _getButtonConfig(
      bool isFinalStep, VirtualStepGuideViewModel viewModel) {
    if (isFinalStep && _isMultiFloorRoute && !_firstRouteCompleted) {
      return (text: 'Continue', onPressed: _proceedToSecondRoute);
    } else if (isFinalStep) {
      return (text: 'Finish', onPressed: () => Navigator.pop(context));
    }
    return (text: 'Next', onPressed: () => viewModel.nextStep(context));
  }

  void _updateStepForMultiFloorRoute(NavigationStep currentStep) {
    if (_isMultiFloorRoute &&
        !_firstRouteCompleted &&
        currentStep.title == 'Destination') {
...
        ..description =
            'Take the ${widget.isDisability ? 'elevator' : 'escalators'} to Floor $endFloor';
    }

    if (_isMultiFloorRoute &&
        _firstRouteCompleted &&
        currentStep.title == 'Start') {
      currentStep
        ..title = 'Connection'
        ..description =
            'Step out of the ${widget.isDisability ? 'elevator' : 'escalators'}.';
    }
  }
...
