...
          return Expanded(
            child: Center(child: Text("No classrooms available", style: TextStyle(color: textColor))),
          );
        } else {
          return SelectableList<String>(
            items: filteredClassrooms,
            title: 'Select a classroom',
            searchController: searchController,
            onItemSelected: _onClassroomSelected,
          );
        }
      },
    );
...
