...
    }
  }

  String _getFloorName(bool isSource, String fromFloor, String toFloor) {
    if (isSource) {
      if (from == yourLocation) {
        return "Floor 1";
      }
      else {return 'Floor $fromFloor';}
    }
    else {
      return 'Floor $toFloor';
    }
...
