appId: com.example.concordia_nav
---
- setLocation:
    latitude: 45.4885
    longitude: -73.8003
- launchApp:
    clearState: true
- assertVisible: "SGW map"
- tapOn: "SGW map"
- assertVisible: "Search..."
- tapOn: "Search..."
- waitForAnimationToEnd
- assertVisible: "Hall Building"
- tapOn: "Hall Building"
- assertVisible: "Select"
- tapOn: "Select"
- assertVisible: "Google Map"
