appId: com.example.concordia_nav
---
- setLocation:
    latitude: 45.4895
    longitude: -73.7797
- launchApp:
    clearState: true
- assertVisible: "Concordia Campus Guide"
- assertVisible: "Indoor directions"
- tapOn: "Indoor directions"
- swipe:
    direction: UP
    duration: 2000
- swipe:
    direction: DOWN
    duration: 2000
- assertVisible: "Hall Building"
- tapOn: "Hall Building"
- assertVisible: "Hall Building"
- assertVisible: "Floor 8"
- tapOn: "Floor 8"
- assertVisible: "Select a classroom"
- assertVisible: "810"
- tapOn: "810"
- assertVisible: "From: Your Location"
- tapOn: "From: Your Location"
- assertVisible: "801"
- tapOn: "801"
- assertVisible: "Start"
- tapOn: "Start"
- assertVisible: "Next"
- tapOn: "Next"
- tapOn: "Next"
- assertVisible: "Finish"
- tapOn: "Finish"
