appId: com.example.concordia_nav
---
- setLocation:
    latitude: 45.4895
    longitude: -73.7797
- launchApp:
    clearState: true
- assertVisible: "Concordia Campus Guide"
- assertVisible: "Indoor directions"
- tapOn: "Indoor directions"
- swipe:
    direction: UP
    duration: 2000
- swipe:
    direction: DOWN
    duration: 2000
- assertVisible: "Hall Building"
- tapOn: "Hall Building"
- assertVisible: "Hall Building"
- assertVisible: "Floor 8"
- tapOn: "Floor 8"
- assertVisible: "Select a classroom"
- swipe:
    start: 50%, 50%
    end: 50%, 30%
- assertVisible: "815"
- tapOn: "815"
- assertVisible: "From: Your Location"
- tapOn: "From: Your Location"
- assertVisible: "Select Floor"
- tapOn: "Select Floor"
- assertVisible: "Floor 9"
- tapOn: "Floor 9"
- assertVisible: "904"
- tapOn: "904"
- assertVisible: "Indoor Directions"
- tapOn:
    point: "91%,28%"
- assertVisible: "Start"
- tapOn: "Start"
- assertVisible: "Next"
- tapOn: "Next"
- tapOn: "Next"
- tapOn: "Next"
- assertVisible: "Continue"
- tapOn: "Continue"
- assertVisible: "Next"
- tapOn: "Next"
- tapOn: "Next"
- tapOn: "Next"
- tapOn: "Next"
- assertVisible: "Finish"
- tapOn: "Finish"
