appId: com.example.concordia_nav
---
- setLocation:
    latitude: 45.4895
    longitude: -73.7797
- launchApp:
    clearState: true
- assertVisible: "Concordia Campus Guide"
- tapOn:
    point: "94%,9%"
- assertVisible: "Smart Planner"
- tapOn: "Create new plan..."
- inputText: "I have to attend a seminar at the J.W. McConnell Building from 9 am to 9:30 am, I have a lecture in H 9.27 from 10:00 am to 11:00 am, and go to a coffee shop for 30 minutes."
- tapOn: "Make Plan"
- assertVisible: "Generated Plan"
- tapOn: "Get Directions"
- assertVisible: "Smart Plan Directions"
- tapOn: "Get Directions"
- tapOn: "Proceed to The Next Direction Step"
- tapOn: "Get Directions"
- tapOn: "Proceed to The Next Direction Step"
- tapOn: "Start"
- tapOn: "Next"
- tapOn: "Next"
- tapOn: "Continue"
- tapOn: "Next"
- tapOn: "Next"
- tapOn: "Next"
- tapOn: "Next"
- tapOn: "Finish"
- tapOn: "Proceed to The Next Direction Step"
- tapOn: "Get Directions"
- tapOn: "Complete My Journey"
